        [CHANGES]
        * Remove Windows library searching path from ldflags of SPVM::Builder::Config
        * Add parse_windows_def_file to SPVM::Builder::Config
        * Add exported_funcs field and add_exported_funcs method to SPVM::Builder::Config, and add the logic of adding exported functions.
        * Add get_src_dir, get_include_dir, get_lib_dir to SPVM::Builder::Config.
0.9019  2021-12-21
        [CHANGES]
        * Rename SPVM::Builder::Config's get_libs, set_libs, unshift_libs, push_libs method to get_runtime_libs, set_runtime_libs, unshift_runtime_libs, push_runtime_libs
          and don't add libraries to linker flags of linker.
        * remove SPVM::Builder::Exe and spvmcc command again because one executable that is portable and work correctly without function conflicts is impossible after long thinking.
          The implementation before removing is saved at the following branch.
          
          https://github.com/yuki-kimoto/SPVM/releases/tag/before_remove_exe_20211216
        
        * SPVM::Builder::Config "ccflags" default becomes empty string except for Windows. Windows is "-fPIC"
        * Remove delete_std and get_std of SPVM::Builder::Config
        * SPVM::Builder::CC->compile don't depend on Perl compiled environment.
        * add SPVM_CC_DEBUG enviroment variable to print SVPM::Builder::CC compile and link outputs to stderr.
        * Remove get_cccdlflags, set_cccdlflags, append_cccdlflags, prepend_cccdlflags of SPVM::Builder::Config
        * Remove get_archlibexp, set_archlibexp of SPVM::Builder::Config
        * remove get_shrpenv, and set_shrpenv. shrpenv config is not used when linking
        * SPVM::Builder::CC->link don't depend on Perl compiled environment as possible.
        * remove set_config and get_config of SPVM::Builder::Config
        * remove replace_all_config of SPVM::Builder::Config